--- a/src/looper-page/looper-footer.html
+++ b/src/looper-page/looper-footer.html
@@ -5,20 +5,15 @@
         <style include="shared-styles">
          :host {
             display: block;
-            background-color: var(--google-grey-300);
+            background-color: var(--paper-grey-700);
             width: 100%;
-            color: var(--app-text-color-light);
-            font-size: 14px;
-        }
 
-        .social,
-        .menus {
-            padding: 16px 0 16px 0;
+            font-size: 14px;
         }
 
         .social a {
             padding: 0 8px 0 8px;
-            color: var(--app-text-color);
+            color: rgba(255, 255, 255, 0.54);
         }
 
         .social a:hover {
@@ -26,10 +21,13 @@
         }
 
         .social {
-            padding: 16px;
+            background: var(--app-text-color-light);
+            width: 100%;
+            height: 80px;
         }
 
         .menus {
+            min-height: 100px;
             min-width: 1024px;
             padding: 16px 0 32px 0;
             /*border-top: 1px dashed rgba(0, 0, 0, .1);*/
@@ -37,35 +35,35 @@
 
         .menus>div {
             padding-left: 8px;
-            border-left: solid 4px rgba(0, 0, 0, .05);
+            font-weight: 300;
+            /*border-left: solid 4px rgba(0, 0, 0, .1);*/
         }
 
         .menus a {
             text-decoration: none;
-            color: var(--app-text-color-light);
+            color: rgba(255, 255, 255, 0.54);
         }
 
         .menus a:hover {
-            color: var(--app-primary-color);
+            color: white;
         }
 
         .copyright {
-            color: var(--app-text-color-light);
+            color: var(--app-text-color);
             padding-bottom: 0;
             font-size: 12px;
+            height: 28px;
+        }
+
+        .title {
+            font-weight: 500;
+            text-transform: uppercase;
+            color: white;
+            padding-bottom: 8px;
         }
         </style>
-        <!-- <div class="social-logo">
-  <span><a href="https://github.com/loopring" class="wrapper"><i class="icon-github icon"></i></a></span>
-  <span><a href="https://loopring.now.sh/" class="wrapper"><i class="icon-slack icon"></i></a></span>
-  <span><a href="https://twitter.com/loopringorg" class="wrapper"><i class="icon-twitter icon"></i></a></span>
-  <span><a href="mailto:foundation@loopring.org" class="wrapper"><i class="icon-mail icon"></i></a></span>
-  <span><a href="https://medium.com/@loopring" class="wrapper"><i class="icon-medium icon"></i></a></span>
-</div>
-
-</div> -->
         <div class="vertical center layout">
-            <div class="horizontal layout social">
+            <div class="horizontal center-justified center layout social">
                 <a styleless href="https://github.com/loopring">
                     <iron-icon icon="media1:github"></iron-icon>
                 </a>
@@ -90,20 +88,22 @@
             </div>
             <div class="horizontal layout justified menus">
                 <div class="vertical start layout">
+                    <div class="title">Foundation & Community</div>
                     <div><a>Loopring Foundation</a></div>
-                    <div><a href="https://github.com/Loopring/whitepaper/raw/master/en_whitepaper.pdf">Whitepaper</a></div>
+                    <div><a>Fellowship of the Ring (FoR)</a></div>
                     <div><a>Knowledge Base</a></div>
                 </div>
                 <div class="vertical start layout">
-                    <div><a>LRC Smart Contract</a></div>
-                    <div><a>Loopring Protocol Smart Contract</a></div>
-                    <div><a>Loopring Ringhash Smart Contract</a></div>
-                    <div><a>EtherToken Smart Contract</a></div>
+                    <div class="title">Loopring Protocol</div>
+                    <div><a href="https://github.com/Loopring/whitepaper/raw/master/en_whitepaper.pdf">Whitepaper</a></div>
+                    <div><a>Ethereum Smart Contracts</a></div>
+                    <div><a>Github Repositories</a></div>
                 </div>
                 <div class="vertical start layout">
-                    <div><a>Fellowship of the Ring (FoR)</a></div>
-                    <div><a>Donation</a></div>
+                    <div class="title">Looper Wallet & DEX</div>
                     <div><a>Disclaimer</a></div>
+                    <div><a>Donation</a></div>
+                    <div><a>Documentation</a></div>
                 </div>
                 <!--         <div class="vertical start layout">
           <div> </div>
