--- a/src/market/recent-orders.html
+++ b/src/market/recent-orders.html
@@ -8,9 +8,9 @@
         }
 
         paper-progress {
-            width: 50%;
-            --paper-progress-active-color: var(--paper-light-green-700);
-            --paper-progress-secondary-color: var(--app-red-color);
+            width: 100%;
+            --paper-progress-active-color: var(--app-primary-color);
+            --paper-progress-secondary-color: var(--paper-amber-500);
         }
         </style>
         <iron-ajax auto url="//raw.githubusercontent.com/Loopring/mock-relay-data/master/orders.json" handle-as="json" last-response="{{resp}}"></iron-ajax>
