--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -43,6 +43,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             font-weight: 400;
             padding-top: 32px;
             font-size: 14px;
+            color: var(--app-text-color);
         }
 
         .sections>paper-card {
@@ -139,7 +140,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             padding-bottom: 8px;
             min-width: 300px;
         }
-        
+
         paper-item.long {
             min-width: 800px;
         }
@@ -153,8 +154,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
 
         paper-item div.title {
-            font-size: 1em;
-            font-weight: 700;
+            font-size: 14px;
+            font-weight: 500;
+            text-transform: uppercase;
             color: var(--app-text-color-light);
         }
 
