--- a/src/my-app.html
+++ b/src/my-app.html
@@ -66,7 +66,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/scary-cookie-consent/scary-cookie-consent.html">
 <link rel="import" href="my-icons.html">
 <link rel="import" href="looper-page/looper-toolbar.html">
-<link rel="import" href="looper-page/looper-notification-bar.html">
 <link rel="import" href="looper-page/looper-footer.html">
 <link rel="import" href="looper-page/simple-toolbar.html">
 <link rel="import" href="looper-page/looper-page.html">
@@ -109,7 +108,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             --app-text-color-light: rgba(0, 0, 0, .54);
             --vaadin-grid-header-cell: {
                 text-transform: uppercase;
-                /*background-color: #e0e0e0;*/
+                color: var(--app-text-color-light);
             }
             display: block;
         }
@@ -216,7 +215,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </app-drawer>
             <app-header-layout has-scrolling-region fullbleed>
                 <app-header fixed slot="header" id="appHeader">
-                    <!-- <looper-notification-bar id="notification"></looper-notification-bar> -->
                     <app-toolbar>
                         <!-- <paper-icon-button icon="menu" drawer-toggle></paper-icon-button> -->
                         <div spacer></div>
