--- a/src/utils/notification-panel.html
+++ b/src/utils/notification-panel.html
@@ -8,10 +8,9 @@
         paper-toast {
             width: 100%;
             text-align: center;
-            min-width: 0;
             border-radius: 0;
             margin: 0;
-            height: 160px;
+            min-height: 180px;
         }
 
         paper-toast a {
