--- a/src/looper-page/looper-footer.html
+++ b/src/looper-page/looper-footer.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <dom-module id="looper-footer" fit>
     <template>
-        <style is="custom-style" include="iron-flex iron-flex-alignment"></style>
+        <style is="custom-style" include="iron-flex iron-flex-alignment paper-material-styles"></style>
         <style include="shared-styles">
          :host {
             display: block;
