--- a/src/page-market.html
+++ b/src/page-market.html
@@ -8,6 +8,7 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="shared-styles.html">
 <link rel="import" href="market/candlestick-chart.html">
 <link rel="import" href="market/depth-chart.html">
@@ -15,11 +16,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="market/order-book.html">
 <link rel="import" href="market/recent-fills.html">
 <link rel="import" href="market/recent-orders.html">
+<link rel="import" href="market/top-orders.html">
 <script src="../bower_components/highstock/highstock.js"></script>
 <!-- <script src="../bower_components/highcharts/highcharts-more.js"></script> -->
 <dom-module id="page-market">
     <template>
-        <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
+        <style is="custom-style" include="iron-flex iron-flex-alignment paper-material-styles"></style>
         <style include="shared-styles">
          :host {
             display: block;
@@ -51,6 +53,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         .tables {
             min-height: 400px;
         }
+
+        paper-fab {
+            position: absolute;
+            right: 100px;
+            @apply --paper-material-elevation-3;
+            background-color: black;
+        }
+
+        paper-fab[show] {
+            background-color: var(--app-red-color);
+        }
+
+        paper-card[hide] {
+            display: none;
+        }
         </style>
         <looper-page>
             <simple-toolbar slot="secondary-toolbar" title="Market" id="[[marketId()]]" back-link="#/markets"></simple-toolbar>
@@ -66,17 +83,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                             <depth-chart name="depth"></depth-chart>
                         </iron-pages>
                     </div>
+                    <paper-fab show$="[[fabShown]]" icon="gavel" id="fab" on-click="flip" elevation="1"></paper-fab>
+                </paper-card>
+                <paper-card hide$="[[fabShown]]">
+                    <operation-panel></operation-panel>
                 </paper-card>
                 <paper-card>
-                    <operation-panel></operation-panel>
+                    <top-orders></top-orders>
                 </paper-card>
                 <paper-card class="tables">
                     <div class="vertical layout">
                         <paper-tabs selected="{{dataSelection}}" attr-for-selected="name">
-                            <paper-tab name="fills">Trades</paper-tab>
-                            <paper-tab name="orders">Orders</paper-tab>
-                            <paper-tab name="myfills">My Trades</paper-tab>
+                            <paper-tab name="orders">Recent Orders</paper-tab>
+                            <paper-tab name="fills">Recent Fills</paper-tab>
                             <paper-tab name="myorders">My Orders</paper-tab>
+                            <paper-tab name="myfills">My Fills</paper-tab>
                         </paper-tabs>
                         <iron-pages selected="{{dataSelection}}" attr-for-selected="name">
                             <recent-fills name="fills" token="{{id}}"></recent-fills>
@@ -105,11 +126,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 },
                 dataSelection: {
                     type: String,
-                    value: "myorders"
+                    value: "orders"
+                },
+                fabShown: {
+                    type: Boolean,
+                    value: true
                 }
             };
         }
 
+        flip() {
+            this.fabShown = !this.fabShown;
+            if (this.fabShown) {
+                this.$.fab.icon = "gavel";
+            } else {
+                this.$.fab.icon = "close";
+            }
+        }
         marketId() {
             return this.id.toUpperCase();
         }
