--- a/src/page-market.html
+++ b/src/page-market.html
@@ -16,7 +16,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="market/order-book.html">
 <link rel="import" href="market/recent-fills.html">
 <link rel="import" href="market/recent-orders.html">
-<link rel="import" href="market/top-orders.html">
 <script src="../bower_components/highstock/highstock.js"></script>
 <!-- <script src="../bower_components/highcharts/highcharts-more.js"></script> -->
 <dom-module id="page-market">
@@ -47,7 +46,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 
         paper-tabs {
-            margin-bottom: 8px;
+            /*margin-bottom: 8px;*/
         }
 
         .tables {
@@ -68,6 +67,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         paper-card[hide] {
             display: none;
         }
+
+        .operation-container {
+            /*background-color: var(--app-text-color-light);*/
+        }
         </style>
         <looper-page>
             <simple-toolbar slot="secondary-toolbar" title="Market" id="[[marketId()]]" back-link="#/markets"></simple-toolbar>
@@ -85,11 +88,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     </div>
                     <paper-fab show$="[[fabShown]]" icon="gavel" id="fab" on-click="flip" elevation="1"></paper-fab>
                 </paper-card>
-                <paper-card hide$="[[fabShown]]">
+                <paper-card class="operation-container" hide$="[[fabShown]]">
                     <operation-panel></operation-panel>
                 </paper-card>
                 <paper-card>
-                    <top-orders></top-orders>
+                    <order-book></order-book>
                 </paper-card>
                 <paper-card class="tables">
                     <div class="vertical layout">
@@ -130,7 +133,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 },
                 fabShown: {
                     type: Boolean,
-                    value: true
+                    value: false
                 }
             };
         }
