wallet link to authorize

--- a/src/my-app.html
+++ b/src/my-app.html
@@ -196,7 +196,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <signtosend-dialog id="signtosend"></signtosend-dialog>
         <notification-panel id="notification"></notification-panel>
         <!-- ajax -->
-        <iron-ajax auto url="//raw.githubusercontent.com/Loopring/mock-relay-data/master/config.json" handle-as="json" last-response="{{appConfig}}"></iron-ajax>
+        <iron-ajax auto url="https://raw.githubusercontent.com/Loopring/mock-relay-data/master/config.json" handle-as="json" last-response="{{appConfig}}"></iron-ajax>
         <!-- global vars -->
         <global-variable key="app-config" value="{{appConfig}}"></global-variable>
         <global-variable key="wallet" value="{{wallet}}"></global-variable>
@@ -244,7 +244,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     <page-fills name="fills"></page-fills>
                     <page-fill name="fill" id={{pageId}}></page-fill>
                     <page-convert name="convert" id={{pageId}}></page-convert>
-                    <page-authorize name="authorize"></page-authorize>
+                    <page-authorize name="authorize" id={{pageId}}></page-authorize>
                     <page-transfer name="transfer"></page-transfer>
                     <page-settings name="settings"></page-settings>
                     <page-doc name="doc" markdown={{pageId}}></page-doc>
