--- a/src/wallet/subpage-generate.html
+++ b/src/wallet/subpage-generate.html
@@ -1,66 +1,66 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
+<script src="../../libs/dist/privateKey.js"></script>
 <dom-module id="subpage-generate" fit>
     <template>
         <style is="custom-style" include="iron-flex iron-flex-alignment app-grid-style"></style>
         <style include="shared-styles">
-         :host {
-            display: block;
-            --paper-card-actions: {
-                background-color: var(--paper-grey-50);
-            }
-            --paper-card-header-text: {
+            :host {
+                display: block;
+                --paper-card-actions: {
+                    background-color: var(--paper-grey-50);
+                } --paper-card-header-text: {
                 font-size: 18px;
                 color: var(--app-text-color-light);
             }
-        }
+            }
 
-        .input-wrapper {
-            padding-top: 24px;
-            padding-bottom: 24px;
-        }
+            .input-wrapper {
+                padding-top: 24px;
+                padding-bottom: 24px;
+            }
 
-        iron-input input {
-            width: 400px;
-        }
+            iron-input input {
+                width: 400px;
+            }
 
-        #visibleBtn {
-            height: 39px;
-            width: 39px;
-            background-color: var(--google-grey-300);
-        }
+            #visibleBtn {
+                height: 39px;
+                width: 39px;
+                background-color: var(--google-grey-300);
+            }
 
-        .card-actions {
-            text-align: center;
-        }
+            .card-actions {
+                text-align: center;
+            }
 
-        .card-actions paper-button {
-            min-width: 360px;
-            /*margin:8px 0 8px 0;*/
-            /*color: var(--app-primary-color-dark);*/
-        }
+            .card-actions paper-button {
+                min-width: 360px;
+                /*margin:8px 0 8px 0;*/
+                /*color: var(--app-primary-color-dark);*/
+            }
 
-        .card-actions paper-button:hover {
-            color: var(--app-primary-color-dark);
-        }
+            .card-actions paper-button:hover {
+                color: var(--app-primary-color-dark);
+            }
 
-        .warning iron-icon {
-            height: 18px;
-            margin-bottom: 5px;
-            color: var(--paper-amber-700);
-        }
+            .warning iron-icon {
+                height: 18px;
+                margin-bottom: 5px;
+                color: var(--paper-amber-700);
+            }
 
-        paper-button[primary] {
-            min-width: 280px;
-        }
+            paper-button[primary] {
+                min-width: 280px;
+            }
 
-        paper-button[primary]>iron-icon {
-            padding-right: 8px;
-        }
+            paper-button[primary] > iron-icon {
+                padding-right: 8px;
+            }
 
-        strong {
-            color: var(--app-primary-color-dark);
-            padding-right: 8px;
-        }
+            strong {
+                color: var(--app-primary-color-dark);
+                padding-right: 8px;
+            }
         </style>
         <div class="sections">
             <paper-card nopadding heading="Generate Ethereum Walelt">
@@ -71,7 +71,8 @@
                             <iron-input bind-value="{{password}}" auto-validate>
                                 <input type$="{{inputType}}">
                             </iron-input>
-                            <paper-icon-button id="visibleBtn" on-click="toggleVisible" icon="{{visibility}}"></paper-icon-button>
+                            <paper-icon-button id="visibleBtn" on-click="toggleVisible"
+                                               icon="{{visibility}}"></paper-icon-button>
                         </div>
                         <div>
                             <p style="color: red">{{passwordCheck(password)}}</p>
@@ -97,15 +98,18 @@
                             </div>
                             <div>
                                 <iron-icon icon="warning"></iron-icon>
-                                <strong>Do not share it!</strong> Your funds will be stolen if you use this file on a malicious/phishing site.
+                                <strong>Do not share it!</strong> Your funds will be stolen if you use this file on a
+                                malicious/phishing site.
                             </div>
                             <div>
                                 <iron-icon icon="warning"></iron-icon>
-                                <strong>Make a backup!</strong> Secure it like the millions of dollars it may one day be worth.
+                                <strong>Make a backup!</strong> Secure it like the millions of dollars it may one day be
+                                worth.
                             </div>
                         </div>
                         <div class="input-wrapper horizontal layout center-justified">
-                            <paper-button primary on-click="downloadKeystore" id="downloadButton" style$="background-color:{{disableColor}}">
+                            <paper-button primary on-click="downloadKeystore" id="downloadButton"
+                                          style$="background-color:{{disableColor}}">
                                 <iron-icon icon="file-download"></iron-icon>
                                 Download Keystore File
                             </paper-button>
@@ -113,95 +117,104 @@
                     </div>
                 </div>
                 <div class="card-actions">
-                    <paper-button id="proceedButton" on-click="proceedClicked">I saved my keystore file. Proceed to unlock my wallet.
+                    <paper-button id="proceedButton" on-click="proceedClicked">I saved my keystore file. Proceed to
+                        unlock my wallet.
                     </paper-button>
                 </div>
             </paper-card>
         </div>
     </template>
     <script>
-    class SubpageGenerate extends Polymer.Element {
-        static get is() {
-            return 'subpage-generate';
-        }
+        const privateKey = require('privateKey');
 
-        static get properties() {
-            return {
-                visibility: {
-                    type: String,
-                    value: 'visibility-off',
-                    notify: true,
-                },
-                inputType: {
-                    type: String,
-                    value: 'password',
-                },
-                unlock: {
-                    type: String,
-                    value: 'hidden',
-                    notify: true,
-                },
 
-                primary: {
-                    type: Boolean,
-                    value: true,
-                },
-
-                disabled: {
-                    type: Boolean,
-                    value: false,
-                },
-            };
-        }
-
-        static get observers() {
-            return ['passwordInput(password)'];
-        }
-
-        passwordInput(password) {
-            if (password !== '') {
-                this.unlock = 'hidden';
+        class SubpageGenerate extends Polymer.Element {
+            static get is() {
+                return 'subpage-generate';
             }
-        }
 
-        unlockClicked() {
-            if (this.password.length >= 9) {
-                this.unlock = 'visible';
+            static get properties() {
+                return {
+                    visibility: {
+                        type: String,
+                        value: 'visibility-off',
+                        notify: true,
+                    },
+                    inputType: {
+                        type: String,
+                        value: 'password',
+                    },
+                    unlock: {
+                        type: String,
+                        value: 'hidden',
+                        notify: true,
+                    },
+
+                    primary: {
+                        type: Boolean,
+                        value: true,
+                    },
+
+                    disabled: {
+                        type: Boolean,
+                        value: false,
+                    },
+
+                    key: Object,
+
+                };
+            }
+
+            static get observers() {
+                return ['passwordInput(password)'];
+            }
+
+            passwordInput(password) {
+                if (password !== '') {
+                    this.unlock = 'hidden';
+                }
+            }
+
+            unlockClicked() {
+                if (this.password.length >= 9) {
+                    const maker = new privateKey();
+                    maker.generate();
+                    this.key = maker;
+                    this.unlock = 'visible';
+                    this.$.downloadButton.disabled = false;
+                    this.disableColor = '';
+                }
+            }
+
+            passwordCheck(string) {
+                return string.length >= 9 || string === '' ? '' : 'please input at least 9 characters';
+            }
+
+            toggleVisible() {
+                this.visibility = this.$.visibleBtn.icon !== 'visibility' ? 'visibility' : 'visibility-off';
+                this.inputType = this.visibility !== 'visibility' ? 'password' : 'text';
+            }
+
+            proceedClicked() {
                 this.password = '';
-                this.$.downloadButton.disabled = false;
-                this.disableColor = '';
+                this.dispatchEvent(new CustomEvent('reset-wallet', {bubbles: true, composed: true}));
+            }
+
+            downloadKeystore(e) {
+                this.$.downloadButton.disabled = true;
+                this.disableColor = 'var(--paper-grey-400)';
+                const element = document.createElement('a');
+                element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(JSON.stringify(this.key.toKeystore(this.password))));
+                const ts = new Date();
+                element.setAttribute('download', ['UTC--', ts.toJSON().replace(/:/g, '-'),'--',this.key.getAddress()].join(''));
+                element.style.display = 'none';
+                document.body.appendChild(element);
+                element.click();
+                document.body.removeChild(element);
+                this.key='';
             }
         }
 
-        passwordCheck(string) {
-            return string.length >= 9 || string === '' ? '' : 'please input at least 9 characters';
-        }
-
-        toggleVisible() {
-            this.visibility = this.$.visibleBtn.icon !== 'visibility' ? 'visibility' : 'visibility-off';
-            this.inputType = this.visibility !== 'visibility' ? 'password' : 'text';
-        }
-
-        proceedClicked() {
-            this.password = '';
-            this.dispatchEvent(new CustomEvent('reset-wallet', { bubbles: true, composed: true }));
-        }
-
-        downloadKeystore(e) {
-            this.$.downloadButton.disabled = true;
-            this.disableColor = 'var(--paper-grey-400)';
-            const element = document.createElement('a');
-            element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent('test'));
-            const ts = new Date();
-
-            element.setAttribute('download', ['UTC--', ts.toJSON().replace(/:/g, '-')].join(''));
-            element.style.display = 'none';
-            document.body.appendChild(element);
-            element.click();
-            document.body.removeChild(element);
-        }
-    }
-
-    window.customElements.define(SubpageGenerate.is, SubpageGenerate);
+        window.customElements.define(SubpageGenerate.is, SubpageGenerate);
     </script>
 </dom-module>
