change slack link

--- a/src/looper-page/looper-footer.html
+++ b/src/looper-page/looper-footer.html
@@ -67,7 +67,7 @@
                 <a styleless href="https://github.com/loopring">
                     <iron-icon icon="media1:github"></iron-icon>
                 </a>
-                <a styleless href="https://loopring.now.sh">
+                <a styleless href="https://loopring-team.slack.com/">
                     <iron-icon icon="media1:slack"></iron-icon>
                 </a>
                 <a styleless href="https://twitter.com/loopringorg">
