--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -98,11 +98,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         iron-input input:focus {
             padding-bottom: 0;
             border-bottom: solid 2px var(--app-primary-color);
+            background-color: white;
         }
 
 
         iron-input input {
             height: 36px;
+            background-color: var(--google-grey-100);
         }
 
         paper-icon-button {
